added meta descriptions for every template that extends base.html

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load unicorn %}
 
+{% block extra_head %}
+    <meta name="description" content="Bag page of Daniela-Handmade Project">
+{% endblock %}
 {% block content %}
 <div class="bag-background background-overlay"></div>
 <div class="container bag-body">
