--- a/products/templates/products/admin_crud_products.html
+++ b/products/templates/products/admin_crud_products.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load unicorn %}
 
+{% block extra_head %}
+<meta name="description" content="Admin Crud Product page of Daniela-Handmade Project">
+{% endblock %}
 {% block content %}
 <div class="products-background background-overlay"></div>
 
