--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,9 @@
 
 {% load static %}
 {% load unicorn %}
-
+{% block extra_head %}
+    <meta name="description" content="Products page of Daniela-Handmade Project">
+{% endblock %}
 {% block content %}
 <div class="products-background background-overlay"></div>
 
