--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,6 +2,10 @@
 {% load socialaccount %}
 {% load static %}
 
+{% block extra_head %}
+<meta name="description" content="Prodfile page of Daniela-Handmade Project">
+{% endblock %}
+
 {% block content %}
 <div class="profile-background background-overlay"></div>
 
