--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% block extra_head %}
+    <meta name="description" content="Home page of Daniela-Handmade Project">
+{% endblock %}
 {% block content %}
 <div class="home-background background-overlay"></div>
 <div class="container">
