--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load unicorn %}
 
+{% block extra_head %}
+<meta name="description" content="Edit Product page of Daniela-Handmade Project">
+{% endblock %}
+
 {% block content %}
 <div class="products-background background-overlay"></div>
 
