--- a/bag/templates/unicorn/item_in_bag.html
+++ b/bag/templates/unicorn/item_in_bag.html
@@ -66,7 +66,7 @@
             <div class="col-12 col-md-7 bag-item-soft-deleted">
                 <p>{{ product.name }}</p>
                 <p>{{ product.description }}</p>
-                <p>size: {{ item.size }}</p>
+                <p>size: {{ selected_size }}</p>
                 <p style="display:inline-block">color:</p> <div style="display:inline-block ;width: 15px; height:15px; background-color: {{ item.color.hexcolor }} ;"></div>
                 <p>quantity: {{ component_quantity }}</p>
                 <p>price: EUR{{ item.product.price }}</p>
