--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>Handmade Daniela With passion{% block extra_title %}{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="https://icons8.com/icon/80355/star">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgzv7gan8/image/upload/v1692090532/daniela_handmade/readme/favicon_q4y4jm.png">
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
