--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -4,5 +4,6 @@
     style="width: 100%; height: 30em; margin-top: 20em;" loop autoplay></lottie-player>
 <div style="width: 100%; height: 30em; text-align: center">
     <h1> This site could not be reached</h1>
+    <button class="btn btn-gate"><a href="{% url 'home' %}"><strong>Home</strong></a></button>
 </div>
 {% endblock %}
