--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -5,5 +5,6 @@
     style="width: 100%; height: 30em; margin-top: 20em;" loop autoplay></lottie-player>
 <div style="width: 100%; height: 30em; text-align: center">
     <h1> Forbidden Area </h1>
+    <button class="btn btn-gate"><a href="{% url 'home' %}"><strong>Home</strong></a></button>
 </div>
 {% endblock %}
