--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -3,5 +3,6 @@
 <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_inueopnr.json" background="transparent" speed="1"
     style="width: 100%; height: 30em; margin-top: 20em;" loop autoplay></lottie-player>
 <div style="width: 100%; height: 30em; text-align: center">
+    <button class="btn btn-gate"><a href="{% url 'home' %}"><strong>Home</strong></a></button>
 </div>
 {% endblock %}
