--- a/bag/templates/unicorn/item_in_bag.html
+++ b/bag/templates/unicorn/item_in_bag.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="non-label-row-widget col-8" name="sizes">
                         {% for size_instance in product.sizes.all %}
-                            <button u:click="select_size_or_color('{{size_instance.size}}', 'size')"
+                            <button u:click.prevent="select_size_or_color('{{size_instance.size}}', 'size')"
                                     data-btn-info="{{size_instance.size}}" id="button-{{size_instance.size}}-{{item_index}}"
                                     class="color-size-button">
                                 {{size_instance.size}}
@@ -49,15 +49,15 @@
                 <div class="quantity-bag-widget row g-0">
                     <div class="label-edit-widget col-4"><label for="quantity">Quantity</label></div>
                     <div class="non-label-col-widget col-8">
-                        <button class="increment-qty btn text-light" u:click="increment_component_quantity"><i class="fas fa-arrow-up"></i>
+                        <button class="increment-qty btn text-light" u:click.prevent="increment_component_quantity"><i class="fas fa-arrow-up"></i>
                         </button>
                         <input class="col-4 col-md-4" type="number" readonly
                             name="quantity" value="{{component_quantity}}" min="1" max="99">
-                        <button class="decrement-qty btn text-light" u:click="decrement_component_quantity"><i class="fas fa-arrow-down"></i>
+                        <button class="decrement-qty btn text-light" u:click.prevent="decrement_component_quantity"><i class="fas fa-arrow-down"></i>
                         </button>
                     </div>
                 </div>
-                <button id="adjust-bag-btn-{{ product.id }}" class="adjust-bag-btn form-control" u:click="adjust_bag" onclick="updateBagstatus()"> Adjust </button>
+                <button id="adjust-bag-btn-{{ product.id }}" class="adjust-bag-btn form-control" u:click.prevent="adjust_bag" onclick="updateBagstatus()"> Adjust </button>
             </div>
         {% elif soft_deleted %}
             <div class="col-12 col-md-5">
@@ -70,8 +70,8 @@
                 <p style="display:inline-block">color:</p> <div style="display:inline-block ;width: 15px; height:15px; background-color: {{ item.color.hexcolor }} ;"></div>
                 <p>quantity: {{ component_quantity }}</p>
                 <p>price: EUR{{ item.product.price }}</p>
-                <button u:click="remove_bag_item" onclick="updateBagstatus()" class="btn btn-danger form-control"><i class="fas fa-trash"></i> permanently delete </button>
-                <button u:click="add_item_back" class="btn btn-secondary form-control"><i class="fas fa-arrow-left"> </i> Add back</button>
+                <button u:click.prevent="remove_bag_item" onclick="updateBagstatus()" class="btn btn-danger form-control"><i class="fas fa-trash"></i> permanently delete </button>
+                <button u:click.prevent="add_item_back" class="btn btn-secondary form-control"><i class="fas fa-arrow-left"> </i> Add back</button>
 
             </div>
         {% else %}
@@ -85,7 +85,7 @@
                 <p style="display:inline-block">color:</p> <div style="display:inline-block ;width: 15px; height:15px; background-color: {{ item.color.hexcolor }} ;"></div>
                 <p>quantity: {{ component_quantity }}</p>
                 <p>price: EUR{{ item.product.price }}</p>
-                <button u:click="editing_product" class="btn form-control text-success"><i class="fas fa-edit"></i> Edit </button>
+                <button u:click.prevent="editing_product" class="btn form-control text-success"><i class="fas fa-edit"></i> Edit </button>
                 <button u:click.prevent="soft_removal_from_bag" class="btn form-control text-danger"><i class="fas fa-trash"></i> Remove </button>
             </div>
         {% endif %}
