fixed html validation errors

--- a/bag/templates/unicorn/bagstatus.html
+++ b/bag/templates/unicorn/bagstatus.html
@@ -1,4 +1,4 @@
-<div>
+<menu>
     <li class="list-inline-item">
             <div class="text-center">
                 <p class="font-weight-bold">
@@ -12,5 +12,5 @@
                 <a href="{% url 'bag' %}" class="btn btn-blue">View Bag</a>
             </div>
     </li>
-</div>
+</menu>
 
