added css validators and checked all html warnings, but left the unicorn lybrary html warnings and errors untouched

--- a/home/templates/unicorn/nav_categories.html
+++ b/home/templates/unicorn/nav_categories.html
@@ -1,5 +1,5 @@
 <menu class="dropdown-menu" aria-labelledby="products">
-    <li class="btn dropdown-item" type="button">
+    <li class="btn dropdown-item">
         {% if category_name == 'All' %}
             <a class="nav-link text-dark" href="{% url 'products' 'All' %}" style="border: 1px solid black"><strong>All Products</strong></a>
         {% else %}
