all a tag within button according to W3C html validator

--- a/products/templates/products/admin_crud_products.html
+++ b/products/templates/products/admin_crud_products.html
@@ -42,9 +42,7 @@
                     </table>
                 </div>
             </div>
-            <button class="btn btn-green">
-                <a href="{% url 'edit_product' product.id%}"><i class="fas fa-edit"></i>Edit</a>
-            </button>
+                <a class="btn btn-green" href="{% url 'edit_product' product.id%}"><i class="fas fa-edit"></i>Edit</a>
             {% unicorn 'delete_product' product=product %}
         </div>
     </div>
