a tag on login page fixed

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -34,6 +34,6 @@
     <h2>
         Don't have an account yet?
     </h2>
-    <button class="btn btn-green"><a href="{% url 'account_signup' %}">Signup</a></button>
+    <a class="btn btn-green" href="{% url 'account_signup' %}">Signup</a>
 </div>
 {% endblock %}
